<resources>
    <string name="app_name">KidzTokenz</string>
    <string name="shr_hint_kidname">Kidname</string>
    <string name="kidname_button_save">Save</string>
    <string name="kidname_button_cancel">Cancel</string>
    <string name="kid_error_name">Please enter a name (min 2 chars)</string>
    <string name="workingFor">I am working for:</string>
    <string name="ktz_hint_taskname">Please enter a name (min 2 chars)</string>
    <string name="ktz_delete_kid">Are you sure you want to delete?</string>
    <string name="deletekid_confirm_button">Yes!</string>
    <string name="deletekid_cancel_button">No</string>
    <string name="ktz_delete_task">Are you sure you want to delete?</string>
    <string name="deletetask_confirm_button">Yes!</string>
    <string name="deletetask_cancel_button">No</string>
    <string name="ktz_task_default_msg">You can do better!!!</string>
    <string name="ktz_negtask_inprogress_msg">You need do better!!!</string>
    <string name="ktz_negtask_complete_msg">Oh No! That\'s too bad</string>
    <string name="ktz_task_inprogress_msg">Keep up the good work!!!</string>
    <string name="ktz_task_complete_msg">You did it. Well done!!!</string>
    <string name="ad_unit_id">/6499/example/banner</string>
    <string name="task_ad_unit_id">/21967931457/KidzTokenz_Banner_TaskAds</string>
    <string name="kid_ad_unit_id">/21967931457/KidzTokenz_Banner_KidAds</string>
    <string name="main_ad_unit_id">/21967931457/KidzTokenz_Banner_MainAds</string>

    <string name="task_adMob_unit_id">ca-app-pub-7065714443867225/7386750131</string>
    <string name="kid_adMob_unit_id">ca-app-pub-7065714443867225/8699831801</string>
    <string name="main_adMob_unit_id">ca-app-pub-7065714443867225/6265240159</string>

    <string name="continue_as_guest">Continue as guest</string>
    <string name="ktz_app_rate_msg">Enjoying KidzTokenz? Would you mind giving us some feedback please?</string>
    <string name="ktz_hint_shareyourthoughts">Share your thoughts</string>
    <string name="capture_this_moment">Capture this moment</string>
    <string name="ktz_button_share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ktz_share_your_thoughts">Share your thoughts</string>
    <string name="share">Share</string>
    <string name="skip">Skip</string>
    <string name="share_note_are_empty">Share your thoughts</string>
    <string name="well_done">Well Done</string>
    <string name="edit_kid">Select Your Monster</string>
</resources>
