<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp" >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/task_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/ktz_delete_task">

    </com.google.android.material.textview.MaterialTextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deletetask_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/deletetask_confirm_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deletetask_cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@id/deletetask_confirm_button"
            android:layout_toLeftOf="@id/deletetask_confirm_button"
            android:text="@string/deletetask_cancel_button" />

    </RelativeLayout>

</LinearLayout>
