<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskname_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/ktz_hint_taskname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/task_selected_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ktz_kidz_card_image_height"
        android:background="?attr/colorPrimaryDark"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp" >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Photo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/capture_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Capture Photo" />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/task_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/kidname_button_save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/task_cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@id/task_save_button"
            android:text="@string/kidname_button_cancel" />

    </RelativeLayout>

</LinearLayout>
