<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:background="@color/colorPrimaryDark" />


            </LinearLayout>

            <FrameLayout
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="top|center_vertical|center_horizontal|center"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10">

                <com.github.abdularis.civ.CircleImageView
                    android:id="@+id/kidMonsterImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    app:highlightEnable="false"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="@dimen/margin_5" />
            </FrameLayout>
        </FrameLayout>


        <TextView
            android:id="@+id/photo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/capture_this_moment"
            android:textColor="@color/hint_black"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:paddingStart="@dimen/margin_20"
            android:paddingEnd="@dimen/margin_20">

            <ImageView
                android:id="@+id/celebrate_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.4"
                android:contentDescription="@null"
                android:minHeight="200dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/celebrate_edit_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:padding="@dimen/margin_10"
                android:src="@drawable/ic_edit_large"
                android:visibility="gone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:id="@+id/camera_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_50"
                    android:text="@string/capture_this_moment"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_14"
                    app:drawableTopCompat="@drawable/ic_camera" />
            </FrameLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/celebrate__title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/ktz_share_your_thoughts"
            android:textColor="@color/hint_black"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/celebrate_note_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_100"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_20"
            android:background="@drawable/point_enter_background"
            android:gravity="top|start|center_vertical|center_horizontal|center|start"
            android:hint="@string/well_done"
            android:inputType="textShortMessage"
            android:maxLength="100"
            android:maxLines="2"
            android:paddingStart="@dimen/margin_10"
            android:paddingTop="@dimen/margin_10"
            android:paddingEnd="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/warn_text"
            style="@style/warnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/celebrate_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_35"
            android:background="@drawable/yellow_button_background"
            android:orientation="horizontal"
            android:padding="@dimen/margin_20">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/share_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_25" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
